	* Fixed bug #4437 - NoteEdit crashes in auto scroll when playing:
	  Fixed crash when turning the page and try to show the current clef.
	  If the clef wasn't placed at all, NoteEdit crashed. Thanks to
	  bensonkao for hunting it down and the idea how to fix it. R349
	* Implemented new method NVoice::selectNearestMidiEvent(int midiTime, bool fromRight = false). It selects the nearest musElement to the given MIDI time. This is useful for eg. When you delete a block of notes and want to use left&right, so the cycling methods are able to find their track now. Also, int main_props_str.lastMidiTime stores the last MIDI times that something happened. Currently, it gets remembered when a note gets deselected with mouse click (when you click on empty space in select mode), when you delete an element (using both backspace or del) or when you delete the whole note block. R351
	* Added CTRL+G shortcut for Goto measure. Some other similar strings tidied up. Updated translations. R357
	* R370 -- merged branches/code_cleanup 353:369
	* R371 -- Patch #627: Update Qt Collection Class names and #include's, from Henri Manson.
	* R372 -- FIXED: When cycling through elements, new element doesn't inherit any properties from the old one, because of the buttons feedback! The interface is now first cleaned (all the properties buttons are set to off) and then set to new.
	* R373 -- Bug #4444: Noteedit crashes when import from double-byte MIDI filename
	* R374 -- Fix PMX-export of notes in the bass-clef
	* R375: Proof-read some strings in export and configure dialog:
	  - MIDI information line -> Additional MIDI parameters
	  - Letter -> US Letter, Legal -> US Legal
	  - Program executable commands like "gv" or "abcm2ps" in new printing code moved outside of i18n() function.
	  - Rewritten some copy&pasting warning dialogs.
	  - Synchronized translations for the new printing strings.
	  - Updated Slovenian translation.
